[package]
name = "ue3"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnom = "3.0.0"
serde = { version = "1.0.60", features = ["derive"] }
serde_yaml = "0.8.11"
